Setting a manual frame range in an action is only recognized after reloading the file #96964

Closed
opened 2022-04-01 22:40:03 +02:00 by Johannes Kollmer · 7 comments

System Information
Operating system: Windows-10-10.0.19043-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 2080 SUPER/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 497.29

Blender Version
Broken: version: 3.1.2, branch: master, commit date: 2022-03-31 17:40, hash: cc66d1020c

Short description of error
In the Dope sheet it is now possible to manually set the frame range of an action. If you do that and then push the action down to the NLA editor the objects behavior does not change. Only after saving the file and reloading manual frame range can be seen.

Exact steps for others to reproduce the error

  1. Create Object
  2. Animate Location of Object on X-Axis from frame 0 to frame 100
  3. Select the Object
  4. In the Dope Sheets N-Panel check "Manual Frame Range"
  5. Set Start to 20 and End to 60
  6. Go to Action Editor and press "push down"
  7. Scrub the timeline and see how the action is still displayed from frame 0 to 100
  8. Save file and reload it
  9. Scrub time line and see that the action is now only displayed from frame 20 to 60

Test File with first 4 steps included:
#96964.blend

**System Information** Operating system: Windows-10-10.0.19043-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 2080 SUPER/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 497.29 **Blender Version** Broken: version: 3.1.2, branch: master, commit date: 2022-03-31 17:40, hash: `cc66d1020c` **Short description of error** In the Dope sheet it is now possible to manually set the frame range of an action. If you do that and then push the action down to the NLA editor the objects behavior does not change. Only after saving the file and reloading manual frame range can be seen. **Exact steps for others to reproduce the error** 1. Create Object 2. Animate Location of Object on X-Axis from frame 0 to frame 100 3. Select the Object 3. In the Dope Sheets N-Panel check "Manual Frame Range" 4. Set Start to 20 and End to 60 5. Go to Action Editor and press "push down" 6. Scrub the timeline and see how the action is still displayed from frame 0 to 100 7. Save file and reload it 8. Scrub time line and see that the action is now only displayed from frame 20 to 60 Test File with first 4 steps included: [#96964.blend](https://archive.blender.org/developer/F12963299/T96964.blend)

Added subscriber: @Lumpengnom-3

Added subscriber: @Lumpengnom-3
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Philipp Oeser self-assigned this 2022-04-06 11:17:31 +02:00
Member

Feature Introduced in 5d59b38605
Seems to work if the Push Down is done in the NLA itself, seems to fail if the Push Down is done from the Action Editor.

bad bpy.ops.action.push_down()
good bpy.ops.nla.action_pushdown()

Difference between the two is that the NLA variant does DEG tagging of the owner and the action, whereas the Action editor variant lacks these.
Dont see a reason for this, will add them

Feature Introduced in 5d59b38605 Seems to work if the Push Down is done in the NLA itself, seems to fail if the Push Down is done from the Action Editor. bad `bpy.ops.action.push_down()` good `bpy.ops.nla.action_pushdown()` Difference between the two is that the NLA variant does DEG tagging of the owner and the action, whereas the Action editor variant lacks these. Dont see a reason for this, will add them

This issue was referenced by 4fd3d96f46

This issue was referenced by 4fd3d96f46ea4d9f30cdd9d0bc957c776b6f4e83
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#96964
No description provided.